[package]
name = "remawin-examples"
version = "0.1.0"
authors = ["Simon Rönnberg <simon.ronnberg@codemill.se>"]

[dependencies]
glutin = "*"
remawin = { path = "../remawin/" }
serde = "*"
serde_derive = "*"
log = "*"
env_logger = "*"

[[example]]
path = "basic.rs"
name = "basic"

[[example]]
path = "complex.rs"
name = "complex"
